Fix text jumping in footer

--- a/assets/sass/fa.scss
+++ b/assets/sass/fa.scss
@@ -9,6 +9,7 @@ body, [dir=rtl] {
 }
 
 // :dir(ltr) :dir(rtl) {
-[dir=ltr] [dir=rtl] {
-    line-height: 0.9;
-}
+// [dir=ltr] [dir=rtl] {
+//     line-height: 0.9;
+//     padding-bottom: 0px;
+// }
