--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -23,6 +23,8 @@ body {
 
 a {
     text-decoration: none;
+    padding-bottom: 2px;
+
     &:hover {
         border-bottom: 1px solid;
     }
